hide gem version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.9"
 services:
   db:
-    image: mysql:5.7
+    image: mysql:##
     volumes:
       - ./db_data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: ####
 
   es:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:#####
     volumes:
       - ./es_data:/usr/share/elasticsearch/data
     environment:
